prepare beta clone

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -59,15 +59,15 @@
     //var monitorFile = 'https://json.nanoticker.info/?file=monitors'
     //var statFile = 'https://json.nanoticker.info/?file=stats'
     //var explorerBaseUrl = 'https://nanocrawler.cc/explorer/account/'
-    var explorerBaseUrl = 'http://localhost:42000/account/'
+    var explorerBaseUrl = 'https://nanolooker.bnano.info/account/'
     //var prColor = '#4a90e2'
     var GAPageName = 'main-net'
     var GATableName = 'Table-main'
   </script>
 
-  <script type="text/javascript">var netdataServer = "http://localhost:42003"; </script>
+  <script type="text/javascript">var netdataServer = "https://netdata.bnano.info"; </script>
   <script type="text/javascript">var netdataTheme = 'slate'</script>
-  <script type="text/javascript" src="http://localhost:42003/dashboard_custom.js"></script>
+  <script type="text/javascript" src="https://netdata.bnano.info/dashboard_custom.js"></script>
   <script>
     // Set options for TV operation
     // This has to be done, after dashboard.js is loaded
@@ -1525,22 +1525,6 @@
     // var netdataServer = 'http://my.server:19999/';
   </script>
 
-  <!--
-      Load dashboard.js
-
-      to host this HTML file on your web server,
-      you have to load dashboard.js from the netdata server.
-
-      So, pick one the two below
-      If you pick the first, set the server name/IP.
-
-      The second assumes you host this file on /usr/share/netdata/web
-      and that you have chown it to be owned by netdata:netdata
-  -->
-  <!--<script type="text/javascript" src="http://remotenode.nano:19999/dashboard.js"></script>-->
-  <!--<script type="text/javascript" src="dashboard.js?v20190816"></script>-->
-  <!-- <script type="text/javascript">var netdataServer = "http://localhost:42003";</script> -->
-  <!-- <script type="text/javascript" src="http://localhost:42003/dashboard_custom.js"></script> -->
 
 
 </body>
